// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates a FETCH_GAME_DATA_FAILURE action 1`] = `
Object {
  "type": "Fiji/game/FETCH_GAME_DATA_FAILURE",
}
`;

exports[`creates a FETCH_GAME_DATA_REQUEST action 1`] = `
Object {
  "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
}
`;

exports[`creates a FETCH_GAME_DATA_SUCCESS action 1`] = `
Object {
  "gameData": Array [
    Object {
      "a": 1,
      "b": 2,
    },
    Object {
      "c": 3,
      "d": 4,
    },
  ],
  "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
}
`;

exports[`handles FETCH_GAME_DATA_FAILURE action 1`] = `
Object {
  "gameData": Array [],
  "isFetching": false,
}
`;

exports[`handles FETCH_GAME_DATA_REQUEST action 1`] = `
Object {
  "gameData": Array [],
  "isFetching": true,
}
`;

exports[`handles FETCH_GAME_DATA_SUCCESS action 1`] = `
Object {
  "gameData": Array [
    Object {
      "a": 1,
      "b": 2,
    },
    Object {
      "c": 3,
      "d": 4,
    },
  ],
  "isFetching": false,
}
`;

exports[`handles fetchConsecutiveData action 1`] = `
Array [
  Object {
    "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
  },
  Object {
    "gameData": Array [
      Object {
        "others": Array [
          "160",
          "550",
          "827",
          "918",
        ],
        "serial": Array [
          "321",
          "322",
          "323",
          "324",
          "325",
        ],
      },
      Object {
        "others": Array [
          "619",
          "750",
          "594",
          "103",
        ],
        "serial": Array [
          "237",
          "238",
          "239",
          "240",
          "241",
        ],
      },
      Object {
        "others": Array [
          "136",
          "660",
          "812",
          "842",
        ],
        "serial": Array [
          "494",
          "495",
          "496",
          "497",
          "498",
        ],
      },
    ],
    "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
  },
]
`;

exports[`handles fetchMatchData action 1`] = `
Array [
  Object {
    "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
  },
  Object {
    "gameData": Array [
      Array [
        Array [
          "y",
          "y",
        ],
        Array [
          "T",
          "T",
        ],
        Array [
          "c",
          "c",
        ],
        Array [
          "v",
          "v",
        ],
      ],
      Array [
        Array [
          "Q",
          "Q",
        ],
        Array [
          "G",
          "G",
        ],
        Array [
          "T",
          "T",
        ],
        Array [
          "X",
          "X",
        ],
      ],
    ],
    "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
  },
]
`;

exports[`handles fetchMultipleChoiceData action 1`] = `
Array [
  Object {
    "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
  },
  Object {
    "gameData": Array [
      Object {
        "answerIndex": 2,
        "choices": Array [
          "C",
          "T",
          "G",
          "X",
        ],
        "question": "G",
      },
      Object {
        "answerIndex": 0,
        "choices": Array [
          "W",
          "Q",
          "Y",
          "J",
        ],
        "question": "W",
      },
    ],
    "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
  },
]
`;

exports[`handles fetchSerialData action 1`] = `
Array [
  Object {
    "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
  },
  Object {
    "gameData": Array [
      Object {
        "answer": 152,
        "serial": Array [
          "147",
          "148",
          "149",
          "150",
          "151",
          "152",
          "153",
          "154",
        ],
      },
      Object {
        "answer": 591,
        "serial": Array [
          "585",
          "586",
          "587",
          "588",
          "589",
          "590",
          "591",
          "592",
        ],
      },
      Object {
        "answer": 778,
        "serial": Array [
          "770",
          "771",
          "772",
          "773",
          "774",
          "775",
          "776",
          "777",
          "778",
          "779",
          "780",
          "781",
          "782",
          "783",
          "784",
          "785",
        ],
      },
      Object {
        "answer": 355,
        "serial": Array [
          "352",
          "353",
          "354",
          "355",
          "356",
          "357",
          "358",
          "359",
          "360",
        ],
      },
    ],
    "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
  },
]
`;

exports[`handles fetchWordData action 1`] = `
Array [
  Object {
    "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
  },
  Object {
    "gameData": Array [
      Object {
        "others": Array [
          "M",
          "H",
          "T",
          "S",
        ],
        "word": Array [
          "A",
          "P",
          "P",
          "L",
          "E",
        ],
      },
      Object {
        "others": Array [
          "S",
          "J",
          "W",
          "K",
        ],
        "word": Array [
          "A",
          "P",
          "P",
          "L",
          "E",
        ],
      },
      Object {
        "others": Array [
          "T",
          "V",
          "T",
          "I",
        ],
        "word": Array [
          "A",
          "P",
          "P",
          "L",
          "E",
        ],
      },
    ],
    "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
  },
]
`;

exports[`returns the same state on an unhandled action 1`] = `
Object {
  "gameData": Array [],
  "isFetching": false,
}
`;
